- partitioning wizard:
  o log failures (mga#11924)

Version 16.11 - 6 December 2013

- fix a crash in rpmdrake when package list is empty (mga#11901)

Version 16.8 - 5 December 2013

- prevent drakxtools-backend to require Glib::Object::Introspection (mga#11842)

Version 16.7 - 5 December 2013

- diskdrake:
  o fix a crash when creating partitions (mga#11876)

Version 16.6 - 4 December 2013

- fix blue background behind left panel text (mga#11866)
  (for not yet released gtk3 mcc)

Version 16.5 - 3 December 2013

- diskdrake:
  o detect eMMc block devices (Luc Menut, mga#11812)
  o fix a crash in partitioning wizard (mga#11820)
  o show labels on partition buttons again but ellipsized (mga#11858)

Version 16.4 - 2 December 2013

- fix banners not being blue anymore with Oxygen-gtk theme (kbo#328270)
- diskdrake:
  o fix diskdrake colorized partition tabs with Adwaita (bgo#719624)

Version 16.3 - 30 November 2013

- harddrake:
  o fix starting after draksound drop OSS/ALSA switch

Version 16.2 - 29 November 2013

- diskdrake:
  o fix dialog keeping growing when switching tabs (mga#11822):
    move partition labels to toolips
- draksound:
  o do not offer to switch to OSS
  o do not offer to switch to another driver if there's none
  o do not offer to pick a random driver when we've a default one
- finish-install:
  o no more run urpmi.update when adding media
    (uneeded with urpmi-7.27+)
- mygtk3 layer:
  o add support for RadioMenuItems for rpmdrake
- ugtk3 layer:
  o make shrinking window work again (eg: draknfs)

Version 16.1 - 28 November 2013

- mcc:
  o restore galaxy RC file, thus fixing left panel text color (mga#11773)
  o fix Gtk2 banners' text position (mga#11778)
- Banners:
  o align text to left instead of centering it
  o text is rendered as blue again
- diskdrake:
  o prevent looping forever when sizing partition tabs
- logdrake:
  o fix Gtk3::TextView::get_window() passed too few parameters (mga#11807)

Version 16.0 - 23 November 2013
