@@ -1,5 +1,6 @@
 - partitioning wizard:
   o log failures (mga#11924)
+  o workaround a crash (mga#11924)
 
 Version 16.11 - 6 December 2013
 
